{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 21,
  "lineage": "846f4753-62c0-0949-9723-a9b67289dc00",
  "resources": [
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:security-group/sg-0fb438def591ab83e",
            "description": "mke cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb438def591ab83e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "example-common",
            "name_prefix": "",
            "owner_id": "043802220583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mke_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mke_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mke_kube_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mke_master_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mke_kube_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:043802220583:targetgroup/example-kube-api/f563839a0bbbc480",
            "arn_suffix": "targetgroup/example-kube-api/f563839a0bbbc480",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:043802220583:targetgroup/example-kube-api/f563839a0bbbc480",
            "lambda_multi_value_headers_enabled": false,
            "name": "example-kube-api",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mke_master_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:043802220583:targetgroup/example-api/2ac068c165148795",
            "arn_suffix": "targetgroup/example-api/2ac068c165148795",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:043802220583:targetgroup/example-api/2ac068c165148795",
            "lambda_multi_value_headers_enabled": false,
            "name": "example-api",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mke_kube_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "mke_master_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:security-group/sg-0df3edeee7f0bc110",
            "description": "mke cluster managers",
            "egress": [],
            "id": "sg-0df3edeee7f0bc110",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              }
            ],
            "name": "example-managers",
            "name_prefix": "",
            "owner_id": "043802220583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.msrs",
      "mode": "managed",
      "type": "aws_instance",
      "name": "msr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.msrs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "msr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.msrs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mke_msr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.msrs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mke_msr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:043802220583:targetgroup/example-msr-api/fe9128fd1be82ba7",
            "arn_suffix": "targetgroup/example-msr-api/fe9128fd1be82ba7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:043802220583:targetgroup/example-msr-api/fe9128fd1be82ba7",
            "lambda_multi_value_headers_enabled": false,
            "name": "example-msr-api",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.msrs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:security-group/sg-03743e90ebb7078fc",
            "description": "mke cluster msrs",
            "egress": [],
            "id": "sg-03743e90ebb7078fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "example-msr",
            "name_prefix": "",
            "owner_id": "043802220583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:internet-gateway/igw-021c393b175c2a0e3",
            "id": "igw-021c393b175c2a0e3",
            "owner_id": "043802220583",
            "tags": {
              "Name": "example"
            },
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:route-table/rtb-0f62ee4aa83113f98",
            "id": "rtb-0f62ee4aa83113f98",
            "owner_id": "043802220583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021c393b175c2a0e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0face9efd53089a8d",
            "route_table_id": "rtb-0f62ee4aa83113f98",
            "subnet_id": "subnet-0f92a6e7148c253da"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c0c8b69cd77d777",
            "route_table_id": "rtb-0f62ee4aa83113f98",
            "subnet_id": "subnet-08557ac21749ef411"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:subnet/subnet-0f92a6e7148c253da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.0.0/24",
            "id": "subnet-0f92a6e7148c253da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043802220583",
            "tags": {
              "kubernetes.io/cluster/example": "true"
            },
            "tags_all": {
              "kubernetes.io/cluster/example": "true"
            },
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:subnet/subnet-08557ac21749ef411",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-08557ac21749ef411",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043802220583",
            "tags": {
              "kubernetes.io/cluster/example": "true"
            },
            "tags_all": {
              "kubernetes.io/cluster/example": "true"
            },
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:vpc/vpc-04e004deb1d278392",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-090a01b46ca727374",
            "default_route_table_id": "rtb-0099f190a0b38a2c1",
            "default_security_group_id": "sg-0f6e9933dc5a8b0f5",
            "dhcp_options_id": "dopt-fd0d5b95",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04e004deb1d278392",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0ca24073d325b2b91",
            "ipv6_cidr_block": "2a05:d01c:db:3a00::/56",
            "main_route_table_id": "rtb-0099f190a0b38a2c1",
            "owner_id": "043802220583",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          }
        }
      ]
    },
    {
      "module": "module.windows_workers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:security-group/sg-09d55515f66c10095",
            "description": "mke cluster windows workers",
            "egress": [],
            "id": "sg-09d55515f66c10095",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              }
            ],
            "name": "example-win-workers",
            "name_prefix": "",
            "owner_id": "043802220583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.workers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:043802220583:security-group/sg-04c1906ee3f2dbdcf",
            "description": "mke cluster workers",
            "egress": [],
            "id": "sg-04c1906ee3f2dbdcf",
            "ingress": [],
            "name": "example-workers",
            "name_prefix": "",
            "owner_id": "043802220583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04e004deb1d278392"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    }
  ]
}